# agent

./: learn.txt
lesson1/: travel_agent.py
lesson4/: .env  .env.example  README.md  a.txt  demo.py  llm_client.py  plan_and_solve_agent.py  react_agent.py  reflection_agent.py  tools.py
py/: .env  .gitignore  Dockerfile  README.md  docker-compose.yml  requirements.txt  run.py  test_agent.py  test_api.py
py/app/: config.py  main.py
py/app/agent/: graph.py  state.py
py/app/agent/nodes/: exercise.py  explanation.py  grading.py  rag.py  router.py  search.py
py/app/api/routes/: chat.py
py/app/api/schemas/: chat.py  exercise.py
py/app/core/: embeddings.py  prompts.py
py/app/db/: models.py  session.py
py/app/services/: llm_service.py  rag_service.py  search_service.py  vector_store.py
py/data/documents/math/: quadratic_functions.md
py/scripts/: ingest_documents.py
test/ai_agent/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
test/ai_agent/app/: __init__.py  main.py
test/ai_agent/app/agent/: __init__.py  react_agent.py  state.py
test/ai_agent/app/api/: __init__.py  chat.py  health.py  rag.py
test/ai_agent/app/core/: __init__.py  config.py
test/ai_agent/app/db/: __init__.py  base.py  crud.py  models.py
test/ai_agent/app/memory/: __init__.py  redis_memory.py  vector_store.py
test/ai_agent/app/rag/: __init__.py  retriever.py
test/ai_agent/app/schemas/: __init__.py  chat.py
test/ai_agent/app/tools/: __init__.py  db_query.py  math_tool.py  web_search.py
test/ai_agent/scripts/: init_db.sql
test/ai_agent/tests/: test_api.py
